Edits to round-up items

--- a/newsletter/2023-11-19.md
+++ b/newsletter/2023-11-19.md
@@ -8,13 +8,17 @@
 
 ### Week in Review
 
-- JPMorgan and Apollo Global unveil a new blockchain-based platform for private markets. https://finance.yahoo.com/news/jpmorgan-apollo-global-unveil-blockchain-051756777.html | Republic is launching a profit-sharing token on Avalanche that will pay investors venture capital-style dividends. https://www.coindesk.com/business/2023/11/17/republics-profit-sharing-token-on-avalanche-will-pay-investors-vc-dividends/
+- **Consensys announced a new consortium** with 16 other tech companies, including giants Microsoft and Tencent, to further decentralize the Infura platform for decentralized apps. ([Cointelegraph](https://cointelegraph.com/news/microsoft-tencent-infura-network-partnership))
 
-- Infura launches a decentralized infrastructure network to provide blockchain access without centralized control. https://blockworks.co/news/infura-decentralized-infrastructure-network | Microsoft partners with Tencent and Infura to provide decentralized identity services on their blockchain infrastructure network. https://cointelegraph.com/news/microsoft-tencent-infura-network-partnership
+- Eigenlayer plans to enable staking with operators of its data availability layer in the first half of 2024. https://www.theblock.co/post/263473/eigenlayer-to-enable-staking-with-operators-of-data-availability-layer-in-h1-2024
 
-- A leading Chinese games company is allocating $100 million to invest in Bitcoin and other cryptocurrencies. https://www.thestreet.com/crypto/markets/leading-chinese-games-company-is-allocating-100-million-to-bitcoin-crypto
+- **Ava Labs welcomed two new tokenization projects to its Avalanche platform.** Wall Street giants JPMorgan and Apollo Global [unveiled a joint initiative](https://finance.yahoo.com/news/jpmorgan-apollo-global-unveil-blockchain-051756777.html) to manage client assets on-chain, with a particular focus on non-stock alternative investments that are typically cumbersome to transact. Separately, Republic said it will [launch a profit-sharing token](https://www.coindesk.com/business/2023/11/17/republics-profit-sharing-token-on-avalanche-will-pay-investors-vc-dividends/) on Avalanche that will pay investors venture capital-style dividends.
 
-- Money is flowing back into crypto stablecoins for the first time since the 2022 market collapse. https://www.thestreet.com/crypto/markets/money-is-flowing-into-crypto-stablecoins-for-first-time-since-collapse-of-2022
+- Bakkt shifts focus to custody services and adds support for Dogecoin and Shiba Inu. https://cointelegraph.com/news/bakkt-shifts-focus-custody-services-adds-cryptocurrency-support-doge-shib-
+
+- **Boyaa, a Hong Kong-based gaming company,** said it will invest $100 million in bitcoin and other cryptocurrencies to [diversify its cash reserves](https://www.thestreet.com/crypto/markets/leading-chinese-games-company-is-allocating-100-million-to-bitcoin-crypto). The move comes at a time when Asia's status as a hub for web3 game development is [on the rise](https://venturebeat.com/games/game7-says-asia-is-a-hub-for-web3-game-development-while-u-s-dominates-funding/).
+
+- **Stablecoin updates:** - Moody's launches a new digital asset monitor to track risk in the crypto space. https://www.moodysanalytics.com/articles/2023/moody_launches_new_digital_asset_monitor_to_track_risk | Money is flowing back into crypto stablecoins for the first time since the 2022 market collapse. (TheStreet.com) https://www.thestreet.com/crypto/markets/money-is-flowing-into-crypto-stablecoins-for-first-time-since-collapse-of-2022
 
 - **Global venture investment in crypto** fell to $1.9 billion in the third quarter, [down 34%](https://www.youtube.com/watch?v=LjSbkKF_m_c&pp=ygUQYmxvb21iZXJnIGNyeXB0bw%3D%3D) from the second period, according to PitchBook analyst Robert Le.
 
@@ -22,22 +26,9 @@
 
 - **The Human Rights Foundation** launched a [new interactive website](https://cbdctracker.hrf.org/home) to track various countries' adoption of central bank digital currencies. HRF opposes such projects due to concerns over privacy and civil liberties.
 
-- An article discussing how Asia is becoming a hub for web3 game development while the US dominates funding in the space. https://venturebeat.com/games/game7-says-asia-is-a-hub-for-web3-game-development-while-u-s-dominates-funding/
+- **ETF obsession continues.** An opinion piece speculating that SEC chair Gary Gensler's political ambitions may be affecting the decision on a spot Bitcoin ETF. https://www.coindesk.com/policy/2023/11/14/cathie-wood-speculates-gary-genslers-political-ambitions-are-affecting-spot-btc-etf-judgement/ | The SEC delays a decision on a Hashdex Bitcoin spot ETF and a Grayscale Ether futures filing. https://www.coindesk.com/policy/2023/11/15/sec-delays-decision-on-hashdex-bitcoin-spot-etf-application-grayscale-ether-futures-filing/ | BitGo CFO predicts more Bitcoin ETF rejections from the SEC are likely in the near future. https://www.coindesk.com/business/2023/11/17/more-bitcoin-etf-rejections-quite-likely-bitgos-belshe-says/ | Grayscale CEO hints that a Bitcoin ETF approval from the SEC may be coming soon, saying the company is ready for approval. https://www.thestreet.com/crypto/markets/grayscale-ceo-hints-at-bitcoin-etf-approval-were-ready-for-the-main-event
 
 - An article about a crypto laundering scheme moving funds from China to Taiwan through bank transactions. https://decrypt.co/206413/crypto-laundering-scheme-bank-transactions-china-taiwan
-
-- **ETF obsession continues.** An opinion piece speculating that SEC chair Gary Gensler's political ambitions may be affecting the decision on a spot Bitcoin ETF. https://www.coindesk.com/policy/2023/11/14/cathie-wood-speculates-gary-genslers-political-ambitions-are-affecting-spot-btc-etf-judgement/ | The SEC delays a decision on a Hashdex Bitcoin spot ETF and a Grayscale Ether futures filing. https://www.coindesk.com/policy/2023/11/15/sec-delays-decision-on-hashdex-bitcoin-spot-etf-application-grayscale-ether-futures-filing/ | BitGo CFO predicts more Bitcoin ETF rejections from the SEC are likely in the near future. https://www.coindesk.com/business/2023/11/17/more-bitcoin-etf-rejections-quite-likely-bitgos-belshe-says/
-
-- Eigenlayer plans to enable staking with operators of its data availability layer in the first half of 2024. https://www.theblock.co/post/263473/eigenlayer-to-enable-staking-with-operators-of-data-availability-layer-in-h1-2024
-
-- Grayscale CEO hints that a Bitcoin ETF approval from the SEC may be coming soon, saying the company is ready for approval. https://www.thestreet.com/crypto/markets/grayscale-ceo-hints-at-bitcoin-etf-approval-were-ready-for-the-main-event
-
-- A report finds that financial firms are looking into integrating blockchain technology. https://www.tradersmagazine.com/featured_articles/financial-firms-look-into-blockchain-integration-finds-report/
-
-- Moody's launches a new digital asset monitor to track risk in the crypto space. https://www.moodysanalytics.com/articles/2023/moody_launches_new_digital_asset_monitor_to_track_risk
-
-- Bakkt shifts focus to custody services and adds support for Dogecoin and Shiba Inu. https://cointelegraph.com/news/bakkt-shifts-focus-custody-services-adds-cryptocurrency-support-doge-shib-
-
 
 ### Odds & Ends
 
