Switching lead item + iterating round-up

--- a/newsletter/2023-11-19.md
+++ b/newsletter/2023-11-19.md
@@ -1,44 +1,56 @@
-# Trying Brave's new AI Leo
+# WTF, Assistant?
 ## #Web3Weekly: Nov. 12-18, 2023
 
-![Leo Hard at Work](https://w3w.news/img/leo-hard-at-work-final.jpg)
-*"Leo Hard at Work." Illustration by Peter A. McKay x DALL-E*
+![Sam Altman, OpenAI's co-founder and chief executive, speaks onstage during 2019's TechCrunch Disrupt conference in San Francisco. Photo courtesy of TechCrunch via Wikimedia Commons under Creative Commons license](https://upload.wikimedia.org/wikipedia/commons/5/56/Disrupt_SF_TechCrunch_Disrupt_San_Francisco_2019_-_Day_2_%2848838377432%29.jpg)
+*Sam Altman, OpenAI's co-founder and chief executive, speaks onstage during 2019's TechCrunch Disrupt conference in San Francisco. Photo courtesy of TechCrunch via Wikimedia Commons under [Creative Commons license](https://creativecommons.org/licenses/by/2.0/deed.en)*
 
-<!-- Lead item: ~400 words. Using Leo to work on the newsletter -->
+ Lead item: ~400 words. Riff on Sam Altman's firing...
+
+
+WaPo coverage of Altman firing: https://www.washingtonpost.com/technology/2023/11/17/openai-ceo-resigns/
+
+WSJ joint interview of OpenAI chiefs: Need YouTube link
+
+Calacanis commentary: Need YouTube link
+
+CNBC coverage of Musk: https://www.cnbc.com/2023/11/16/elon-musk-calls-antisemitic-tweet-the-actual-truth.html
+
+Apple, IBM, and Disney canceled Twitter ad buys: https://www.theguardian.com/technology/2023/nov/17/elon-musk-antisemitic-tweet-apple-pausing-ads
+
+Microsoft has put 10B into the company, doesn't have a board seat, but owns 49% of the company.
+
+Three independent directors did this.
 
 ### Week in Review
 
+- **The five largest stablecoins** have depegged from the U.S. dollar by at least 3% on over 600 occasions so far this year, according to new research by [Moody's Analytics](https://www.moodysanalytics.com/articles/2023/moody_launches_new_digital_asset_monitor_to_track_risk). The report's timing is worrisome, considering investor money has recently begun flowing into stablecoins for the first time in more than a year, according to [TheStreet.com](https://www.thestreet.com/crypto/markets/money-is-flowing-into-crypto-stablecoins-for-first-time-since-collapse-of-2022).
+
+- **The Human Rights Foundation** launched a [new interactive website](https://cbdctracker.hrf.org/home) to track various countries' adoption of central bank digital currencies. HRF opposes such projects due to concerns over privacy and civil liberties.
+
 - **Consensys announced a new consortium** with 16 other tech companies, including giants Microsoft and Tencent, to further decentralize the Infura platform for decentralized apps. ([Cointelegraph](https://cointelegraph.com/news/microsoft-tencent-infura-network-partnership))
 
-- Eigenlayer plans to enable staking with operators of its data availability layer in the first half of 2024. https://www.theblock.co/post/263473/eigenlayer-to-enable-staking-with-operators-of-data-availability-layer-in-h1-2024
-
 - **Ava Labs welcomed two new tokenization projects to its Avalanche platform.** Wall Street giants JPMorgan and Apollo Global [unveiled a joint initiative](https://finance.yahoo.com/news/jpmorgan-apollo-global-unveil-blockchain-051756777.html) to manage client assets on-chain, with a particular focus on non-stock alternative investments that are typically cumbersome to transact. Separately, Republic said it will [launch a profit-sharing token](https://www.coindesk.com/business/2023/11/17/republics-profit-sharing-token-on-avalanche-will-pay-investors-vc-dividends/) on Avalanche that will pay investors venture capital-style dividends.
-
-- Bakkt shifts focus to custody services and adds support for Dogecoin and Shiba Inu. https://cointelegraph.com/news/bakkt-shifts-focus-custody-services-adds-cryptocurrency-support-doge-shib-
-
-- **Boyaa, a Hong Kong-based gaming company,** said it will invest $100 million in bitcoin and other cryptocurrencies to [diversify its cash reserves](https://www.thestreet.com/crypto/markets/leading-chinese-games-company-is-allocating-100-million-to-bitcoin-crypto). The move comes at a time when Asia's status as a hub for web3 game development is [on the rise](https://venturebeat.com/games/game7-says-asia-is-a-hub-for-web3-game-development-while-u-s-dominates-funding/).
-
-- **Stablecoin updates:** - Moody's launches a new digital asset monitor to track risk in the crypto space. https://www.moodysanalytics.com/articles/2023/moody_launches_new_digital_asset_monitor_to_track_risk | Money is flowing back into crypto stablecoins for the first time since the 2022 market collapse. (TheStreet.com) https://www.thestreet.com/crypto/markets/money-is-flowing-into-crypto-stablecoins-for-first-time-since-collapse-of-2022
 
 - **Global venture investment in crypto** fell to $1.9 billion in the third quarter, [down 34%](https://www.youtube.com/watch?v=LjSbkKF_m_c&pp=ygUQYmxvb21iZXJnIGNyeXB0bw%3D%3D) from the second period, according to PitchBook analyst Robert Le.
 
 - **Bitcoin and global stock markets are now negatively correlated** to a greater degree than any time since the start of the COVID pandemic in early 2020. ([Bloomberg](https://www.msn.com/en-us/money/markets/bitcoin-stocks-correlation-now-most-negative-since-covid-s-onset/ar-AA1jXLc2))
 
-- **The Human Rights Foundation** launched a [new interactive website](https://cbdctracker.hrf.org/home) to track various countries' adoption of central bank digital currencies. HRF opposes such projects due to concerns over privacy and civil liberties.
+- **Bakkt is expanding its custody services** to support more tokens, including Dogecoin and Shiba Inu. The move comes on the heels of the firm's recent disclosure of a 28% quarterly decline in customer assets. ([Cointelegraph](https://cointelegraph.com/news/bakkt-shifts-focus-custody-services-adds-cryptocurrency-support-doge-shib-coins))
 
-- **ETF obsession continues.** An opinion piece speculating that SEC chair Gary Gensler's political ambitions may be affecting the decision on a spot Bitcoin ETF. https://www.coindesk.com/policy/2023/11/14/cathie-wood-speculates-gary-genslers-political-ambitions-are-affecting-spot-btc-etf-judgement/ | The SEC delays a decision on a Hashdex Bitcoin spot ETF and a Grayscale Ether futures filing. https://www.coindesk.com/policy/2023/11/15/sec-delays-decision-on-hashdex-bitcoin-spot-etf-application-grayscale-ether-futures-filing/ | BitGo CFO predicts more Bitcoin ETF rejections from the SEC are likely in the near future. https://www.coindesk.com/business/2023/11/17/more-bitcoin-etf-rejections-quite-likely-bitgos-belshe-says/ | Grayscale CEO hints that a Bitcoin ETF approval from the SEC may be coming soon, saying the company is ready for approval. https://www.thestreet.com/crypto/markets/grayscale-ceo-hints-at-bitcoin-etf-approval-were-ready-for-the-main-event
+- **The Ethereum staking platform EigenLayer** announced plans to rollout the second phase of its main network in the first half of 2024. ([The Block](https://www.theblock.co/post/263473/eigenlayer-to-enable-staking-with-operators-of-data-availability-layer-in-h1-2024))
 
-- An article about a crypto laundering scheme moving funds from China to Taiwan through bank transactions. https://decrypt.co/206413/crypto-laundering-scheme-bank-transactions-china-taiwan
+- **Boyaa, a Hong Kong-based gaming company,** said it will invest $100 million in bitcoin and other cryptocurrencies to [diversify its cash reserves](https://www.thestreet.com/crypto/markets/leading-chinese-games-company-is-allocating-100-million-to-bitcoin-crypto). The move comes at a time when Asia's status as a hub for web3 game development is [on the rise](https://venturebeat.com/games/game7-says-asia-is-a-hub-for-web3-game-development-while-u-s-dominates-funding/).
+
+- **U.S. authorities arrested and charged three men** with laundering $10 million in crypto through a series of fraudulent transactions with Asian banks. ([Decrypt](https://decrypt.co/206413/crypto-laundering-scheme-bank-transactions-china-taiwan))
+
 
 ### Odds & Ends
 
 - **Blockgeeks published** a handy [beginner's guide to Solana](https://blockgeeks.com/guides/how-solana-works-a-beginners-guide/).
 
-- An article discussing concerns around an AI assistant app for kids and the need for more oversight of how children's data is collected and used. https://www.washingtonpost.com/technology/2023/11/16/ai-kids-app-review/
+- **Washington Post tech columnist Geoffrey A. Fowler** offered [some tips](https://www.washingtonpost.com/technology/2023/11/16/ai-kids-app-review/) to help kids understand and use AI apps safely.
 
-- **Ferrari announced** that U.S. customers can now buy its cars using crypto. The automaker plans to offer such payments in Europe soon as well through a partnership wtih BitPay. ([Benzinga](https://www.benzinga.com/markets/equities/23/10/35254672/ferrari-joins-crypto-race-begins-accepting-digital-payments-in-us))
-
-- **The lawsuit spawned by** a skiing accident involving actress Gwyneth Paltrow and a retired optometrist has been turned into a musical in London. ([Variety](https://variety.com/2023/theater/global/gwyneth-paltrow-ski-trial-musical-london-gwyneth-goes-skiing-1235791222/))
+- **When Spider?** Ferrari announced that U.S. customers can now buy its cars using crypto. The automaker plans to offer such payments in Europe soon as well through a partnership wtih BitPay. ([Benzinga](https://www.benzinga.com/markets/equities/23/10/35254672/ferrari-joins-crypto-race-begins-accepting-digital-payments-in-us))
 
 <!-- Boilerplate needs re-working. This is version from last week... -->
 
