Adding in Leo mention

--- a/newsletter/2023-11-19.md
+++ b/newsletter/2023-11-19.md
@@ -1,7 +1,7 @@
 # WTF, Assistant?
 ## #Web3Weekly: Nov. 12-18, 2023
 
-![Sam Altman, OpenAI's co-founder and chief executive, speaks onstage during 2019's TechCrunch Disrupt conference in San Francisco. Photo courtesy of TechCrunch via Wikimedia Commons under Creative Commons license](https://upload.wikimedia.org/wikipedia/commons/5/56/Disrupt_SF_TechCrunch_Disrupt_San_Francisco_2019_-_Day_2_%2848838377432%29.jpg)
+![OpenAI co-founder Sam Altman speaks onstage during 2019's TechCrunch Disrupt conference in San Francisco. Photo courtesy of TechCrunch via Wikimedia Commons under Creative Commons license](https://upload.wikimedia.org/wikipedia/commons/5/56/Disrupt_SF_TechCrunch_Disrupt_San_Francisco_2019_-_Day_2_%2848838377432%29.jpg)
 *Sam Altman, OpenAI's co-founder and CEO, speaks onstage during 2019's TechCrunch Disrupt conference in San Francisco. Photo courtesy of TechCrunch via Wikimedia Commons under [Creative Commons license](https://creativecommons.org/licenses/by/2.0/deed.en)*
 
 **The power struggle that erupted Friday at OpenAI** is as [chaotic](https://www.nytimes.com/2023/11/18/technology/sam-altman-open-ai.html) as any I have ever seen at any company. To use a word that's become a personal favorite since the pandemic, we will not be able to *unsee* this anytime soon.
@@ -14,7 +14,7 @@ Don't buy it.
 
 All this year, we've been told that widespread use of AI will be one of the biggest technological events in humankind's history, with potentially massive benefits but also risks on par with those [of nuclear weapons](https://www.safe.ai/statement-on-ai-risk).
 
-Well, we just got a closer peek at arguably the most influential people leading the charge on AI, including mitigation of those worst-case scenarios. The picture is not pretty. That is really why this matters so much.
+Well, we just got a closer peek at arguably the most influential people leading the charge on AI, including mitigation of those worst-case scenarios. The picture is not pretty, and that is really why this matters so much.
 
 A useful comparison: OpenAI has a valuation over [$80 billion](https://news.crunchbase.com/ai/openai-unicorn-valuation-china-zhipu-thrive/) on the private market. If it were an S&P 500 company, that would put it roughly in the weight class of [Schlumberger](https://finance.yahoo.com/quote/SLB?p=SLB&.tsrc=fin-srch), [CVS](https://finance.yahoo.com/quote/CVS), and [Progressive](https://finance.yahoo.com/quote/PGR).
 
@@ -27,6 +27,14 @@ Tech companies are subject to exactly the same greed, careerism, and internal ba
 Despite all its programming brilliance, OpenAI clearly has not solved that more banal corporate problem. Beware.
 
 ### Week in Review
+
+**As it happens,** I began using a non-OpenAI app earlier in the week to help me curate headlines for the newsletter. Leo, an AI [recently added](https://brave.com/leo-launch/) to regular releases of the Brave web browser, helped do early drafting of the news summary below.  
+
+Overall, I would give Leo high marks so far. And I love that it has built-in privacy protections, which have always been a priority for Brave. To support them, I have now signed up for a subscription to Leo's paid tier. ☺️
+
+Frankly, I found Leo is not very good right now at surfing entire sites to identify potential stories of interest. But if I fed it links of specific articles I had already identified myself, it did a good job of summarizing them in a sentence or two. I then did additional fact checking and edits, just to be safe.
+
+On to the latest news:
 
 - **The five largest stablecoins** have depegged from the U.S. dollar by at least 3% on over 600 occasions so far this year, according to new research by [Moody's Analytics](https://www.moodysanalytics.com/articles/2023/moody_launches_new_digital_asset_monitor_to_track_risk). The report's timing is worrisome, considering investor money has recently begun flowing into stablecoins for the first time in more than a year, according to [TheStreet.com](https://www.thestreet.com/crypto/markets/money-is-flowing-into-crypto-stablecoins-for-first-time-since-collapse-of-2022).
 
