--- a/newsletter/2023-12-03.md
+++ b/newsletter/2023-12-03.md
@@ -7,34 +7,29 @@
 
 - **Investors have moved $1.4 billion in bitcoin off exchanges since Nov. 14,** according to data from Glassnode. Such activity generally reflects bullish sentiment among investors, who bid bitcoin to a weekly gain of 6%. The token recently traded at an 18-month high near $40,000 per coin, bolstered by hopes for rate cuts by the Federal Reserve and imminent U.S. regulatory approval of an exchange-traded fund holding bitcoin. ([Coindesk](https://www.coindesk.com/markets/2023/12/01/bitcoin-eyes-40k-as-1b-in-btc-withdrawals-suggests-bullish-mood/))
 
+- **A new study by the University of Cambridge** shows that the Ethereum network produced carbon dioxide emissions equivalent to the nation of Honduras before its recent upgrade to a less energy-intensive protocol for verifying transactions. Energy usage is down 99% since, according to developers. ([Reuters](https://www.reuters.com/sustainability/ethereum-blockchain-produced-equivalent-honduras-annual-emissions-before-upgrade-2023-12-01/))
+
 - **Binance founder and former chief executive "CZ" Zhao** [stepped down](https://www.coindesk.com/policy/2023/11/28/changpeng-cz-zhao-steps-down-from-binanceus-board/) as chairman of the exchange's U.S. affiliate. While Binance.US was not part of parent Binance's recent [$4.3 billion settlement](https://www.coindesk.com/policy/2023/11/21/binance-to-settle-charges-with-us-doj-source/) with American regulators, it is still facing its own case with the Securities and Exchange Commission for allegely offering unregistered securities to U.S. investors.
+
+- **Coinbase may be forced to share some customers' trading data** with the Commodity Futures Trading Commission as part of the U.S. regulator's litigation with Dubai-based marketplace Bybit. ([Decrypt](https://decrypt.co/207736/coinbase-might-forced-share-bitcoin-trading-data-cftc))
+
+- **Fortune published** an [in-depth profile](https://fortune.com/longform/gary-gensler-sec-chair-interview-cryptocurrency-climate-change/) of SEC Chair Gary Gensler, who was welcomed by the crypto industry as a sympathetic figure when he took office in early 2021. The consensus is decidely different now, to say the least.
+
+- **Cardano has launched beta testing** for a new blockchain-based AI chatbot named Girolamo. ([CryptoSlate](https://cryptoslate.com/cardano-enters-beta-test-phase-for-new-blockchain-based-ai-chat-bot-girolamo/))
 
 - **OpenAI competitor Anthropic** has an unconventional governance structure of its own that could lead to similar management turmoil at some point. ([Slate](https://slate.com/technology/2023/12/anthropic-openai-board-trust-effective-altruism.html))
 
-- Coinbase may be forced to share bitcoin trading data with the CFTC. The Commodity Futures Trading Commission is seeking more oversight of cryptocurrency exchanges like Coinbase. The CFTC wants detailed trading data to better monitor the crypto market. (https://decrypt.co/207736/coinbase-might-forced-share-bitcoin-trading-data-cftc)
+- **Some pioneering ETF issuers,** including ProShares, Amplify Investments and Roundhill, are uncharacteristically sitting out the race on Wall Street to offer a listed bitcoin fund. ([Reuters](https://www.reuters.com/technology/spot-bitcoin-etf-race-some-pioneers-stick-sidelines-2023-11-28/))
 
-- SEC Chair Gary Gensler discussed the regulation of cryptocurrency and climate change initiatives in an interview. He said more regulation is needed for cryptocurrency exchanges and platforms and that the SEC is considering how crypto markets could benefit from reforms. (https://fortune.com/longform/gary-gensler-sec-chair-interview-cryptocurrency-climate-change/)
+- **The online bank SoFi is cutting its crypto business** and requiring customers to migrate to Blockchain.com or liquidate holdings by early 2023. Ouch. ([Fortune](https://fortune.com/crypto/2023/11/29/sofi-cutting-crypto-business-customers-must-migrate-or-liquidate/))
 
-- Chainlink has upgraded its staking mechanism and now has a 45 million LINK staking pool. The protocol's new staking contracts will allow node operators to stake LINK to secure the network and earn transaction fees. (https://www.theblock.co/post/264976/chainlink-upgrades-staking-mechanism-45-million-link-pool)
+- **Cross-chain network Wormhole raised $225 million** in a venture funding round led by Paradigm. ([Fortune](https://finance.yahoo.com/news/wormhole-raises-225-million-2-140000498.html))
 
-- Cardano has entered the beta testing phase for its new blockchain-based AI chatbot named Girolamo. The chatbot was created by Anthropic to have natural conversations and be helpful, harmless, and honest using a technique called Constitutional AI. (https://cryptoslate.com/cardano-enters-beta-test-phase-for-new-blockchain-based-ai-chat-bot-girolamo/)
+- **Circle and SBI Holdings formed a partnership** to facilitate usage of the USDC stablecoin and web3 applications in Japan. ([Cryptopolitan](https://www.msn.com/en-us/money/markets/japanese-market-embraces-usdc-as-circle-and-sbi-set-the-stage-for-web3/ar-AA1kB53V)
 
-- Ethereum's blockchain produced emissions equivalent to a small country before its recent upgrade. Data shows the Ethereum network emitted about 36.95 million tons of carbon dioxide in 2021, similar to emissions from Honduras. The Merge upgrade significantly reduced Ethereum's energy usage and environmental impact. (https://www.reuters.com/sustainability/ethereum-blockchain-produced-equivalent-honduras-annual-emissions-before-upgrade-2023-12-01/)
+- **A new study found** that about three-quarters of blockchain games failed within the first five years after launch. Only 26% of 12,000 games launched between 2017 and 2021 remain active, according to data from CoinGecko. ([Cointelegraph](https://cointelegraph.com/news/three-quarters-web3-blockchain-games-failed-last-five-years-coingecko))
 
-- Some pioneering bitcoin ETF issuers in the US are sitting on the sidelines as the race for a spot bitcoin ETF heats up. While some issuers are still pursuing proposals, others have withdrawn applications or are waiting to see how the SEC responds. (https://www.reuters.com/technology/spot-bitcoin-etf-race-some-pioneers-stick-sidelines-2023-11-28/)
-
-- Cross-chain network Wormhole raised $225 million in a Series B funding round led by Paradigm. Wormhole aims to use the funds to further develop its technology and grow its team to support an expanding decentralized web. (https://finance.yahoo.com/news/wormhole-raises-225-million-2-140000498.html)
-
-- A study found that around three-quarters of blockchain games failed within the first five years after launch. Only 26% of the 12,000 games launched between 2017-2021 remained active, according to data from CoinGecko. (https://cointelegraph.com/news/three-quarters-web3-blockchain-games-failed-last-five-years-coingecko)
-
-
-- The Japanese market is embracing USDC stablecoin as Circle and SBI Group lay the groundwork for web3 adoption. They launched a JPY-backed stablecoin and are building decentralized apps to drive usage of digital payments and assets. (https://www.msn.com/en-us/money/markets/japanese-market-embraces-usdc-as-circle-and-sbi-set-the-stage-for-web3/ar-AA1kB53V)
-
-- Sofi is cutting its crypto business and requiring customers to migrate or liquidate holdings by early 2023. The online bank cited difficult market conditions and a need to focus on growing other parts of its business. (https://fortune.com/crypto/2023/11/29/sofi-cutting-crypto-business-customers-must-migrate-or-liquidate/)
-
-- Over $1 billion worth of bitcoin was withdrawn from exchanges in a single day, suggesting bullish sentiment as the price of bitcoin eyes $40,000. Large transactions moving off exchanges often precede price increases. (https://www.coindesk.com/markets/2023/12/01/bitcoin-eyes-40k-as-1b-in-btc-withdrawals-suggests-bullish-mood/)
-
-- Major League Baseball and Formula 1 face potential fraud lawsuits for promoting FTX's cryptocurrency exchange before its collapse. They are accused of failing to conduct proper due diligence before partnering with FTX. (https://www.msn.com/en-us/sports/motorsports/mlb-formula-1-face-fraud-suits-for-promoting-ftx-cryptocurrency/ar-AA1kCYQq)
+- **FTX investors filed a lawsuit in Miami against Major League Baseball** for its promotional deal with the bankrupt exchange, which the plaintiffs argue say to aiding FTX's massive fraud. Other sports leagues could soon face similar litigation, as have several individual celebrity endorsers of FTX. ([Bloomberg](https://www.msn.com/en-us/sports/motorsports/mlb-formula-1-face-fraud-suits-for-promoting-ftx-cryptocurrency/ar-AA1kCYQq))
 
 ### Odds & Ends
 
