--- a/newsletter/2023-12-03.md
+++ b/newsletter/2023-12-03.md
@@ -1,7 +1,7 @@
-# Enough turkey already
+# A post-turkey return
 ## #Web3Weekly: Nov. 26 to Dec. 2, 2023
 
-**You might have noticed,** I took an extended break last weekend for the Thanksgiving holiday here in the U.S. But it's good to be back with you, as there is once again much decentralization news to cover...
+**You might have noticed,** I took an extended break last weekend for the Thanksgiving holiday here in the U.S. But it's good to be back with you now, as there is once again much decentralization news to cover.
 
 ### Week in Review
 
@@ -21,7 +21,7 @@
 
 - **Some pioneering ETF issuers,** including ProShares, Amplify Investments and Roundhill, are uncharacteristically sitting out the race on Wall Street to offer a listed bitcoin fund. ([Reuters](https://www.reuters.com/technology/spot-bitcoin-etf-race-some-pioneers-stick-sidelines-2023-11-28/))
 
-- **The online bank SoFi is cutting its crypto business** and requiring customers to migrate to Blockchain.com or liquidate holdings by early 2023. Ouch. ([Fortune](https://fortune.com/crypto/2023/11/29/sofi-cutting-crypto-business-customers-must-migrate-or-liquidate/))
+- **The online bank SoFi is cutting its crypto business** and requiring customers to migrate to Blockchain.com or liquidate holdings by year end. Ouch. ([Fortune](https://fortune.com/crypto/2023/11/29/sofi-cutting-crypto-business-customers-must-migrate-or-liquidate/))
 
 - **Cross-chain network Wormhole raised $225 million** in a venture funding round led by Paradigm. ([Fortune](https://finance.yahoo.com/news/wormhole-raises-225-million-2-140000498.html))
 
