--- a/newsletter/2023-12-03.md
+++ b/newsletter/2023-12-03.md
@@ -5,11 +5,11 @@
 
 ### Week in Review
 
+- **Binance founder and former chief executive "CZ" Zhao** [stepped down](https://www.coindesk.com/policy/2023/11/28/changpeng-cz-zhao-steps-down-from-binanceus-board/) as chairman of the exchange's U.S. affiliate. While Binance.US was not part of parent Binance's recent [$4.3 billion settlement](https://www.coindesk.com/policy/2023/11/21/binance-to-settle-charges-with-us-doj-source/) with American regulators, it is still facing its own case with the Securities and Exchange Commission for allegely offering unregistered securities to U.S. investors.
+
 - **Investors have moved $1.4 billion in bitcoin off exchanges since Nov. 14,** according to data from Glassnode. Such activity generally reflects bullish sentiment among investors, who bid bitcoin to a weekly gain of 6%. The token recently traded at an 18-month high near $40,000 per coin, bolstered by hopes for rate cuts by the Federal Reserve and imminent U.S. regulatory approval of an exchange-traded fund holding bitcoin. ([Coindesk](https://www.coindesk.com/markets/2023/12/01/bitcoin-eyes-40k-as-1b-in-btc-withdrawals-suggests-bullish-mood/))
 
 - **A new study by the University of Cambridge** shows that the Ethereum network produced carbon dioxide emissions equivalent to the nation of Honduras before its recent upgrade to a less energy-intensive protocol for verifying transactions. Energy usage is down 99% since, according to developers. ([Reuters](https://www.reuters.com/sustainability/ethereum-blockchain-produced-equivalent-honduras-annual-emissions-before-upgrade-2023-12-01/))
-
-- **Binance founder and former chief executive "CZ" Zhao** [stepped down](https://www.coindesk.com/policy/2023/11/28/changpeng-cz-zhao-steps-down-from-binanceus-board/) as chairman of the exchange's U.S. affiliate. While Binance.US was not part of parent Binance's recent [$4.3 billion settlement](https://www.coindesk.com/policy/2023/11/21/binance-to-settle-charges-with-us-doj-source/) with American regulators, it is still facing its own case with the Securities and Exchange Commission for allegely offering unregistered securities to U.S. investors.
 
 - **Coinbase may be forced to share some customers' trading data** with the Commodity Futures Trading Commission as part of the U.S. regulator's litigation with Dubai-based marketplace Bybit. ([Decrypt](https://decrypt.co/207736/coinbase-might-forced-share-bitcoin-trading-data-cftc))
 
@@ -17,7 +17,7 @@
 
 - **Cardano has launched beta testing** for a new blockchain-based AI chatbot named Girolamo. ([CryptoSlate](https://cryptoslate.com/cardano-enters-beta-test-phase-for-new-blockchain-based-ai-chat-bot-girolamo/))
 
-- **OpenAI competitor Anthropic** has an unconventional governance structure of its own that could lead to similar management turmoil at some point. ([Slate](https://slate.com/technology/2023/12/anthropic-openai-board-trust-effective-altruism.html))
+- **OpenAI competitor Anthropic** has a similarly unconventional governance structure that could also lead to management turmoil at some point. ([Slate](https://slate.com/technology/2023/12/anthropic-openai-board-trust-effective-altruism.html))
 
 - **Some pioneering ETF issuers,** including ProShares, Amplify Investments and Roundhill, are uncharacteristically sitting out the race on Wall Street to offer a listed bitcoin fund. ([Reuters](https://www.reuters.com/technology/spot-bitcoin-etf-race-some-pioneers-stick-sidelines-2023-11-28/))
 
@@ -25,7 +25,7 @@
 
 - **Cross-chain network Wormhole raised $225 million** in a venture funding round led by Paradigm. ([Fortune](https://finance.yahoo.com/news/wormhole-raises-225-million-2-140000498.html))
 
-- **Circle and SBI Holdings formed a partnership** to facilitate usage of the USDC stablecoin and web3 applications in Japan. ([Cryptopolitan](https://www.msn.com/en-us/money/markets/japanese-market-embraces-usdc-as-circle-and-sbi-set-the-stage-for-web3/ar-AA1kB53V)
+- **Circle and SBI Holdings formed a partnership** to facilitate usage of the USDC stablecoin and web3 applications in Japan. ([Cryptopolitan](https://www.msn.com/en-us/money/markets/japanese-market-embraces-usdc-as-circle-and-sbi-set-the-stage-for-web3/ar-AA1kB53V))
 
 - **A new study found** that about three-quarters of blockchain games failed within the first five years after launch. Only 26% of 12,000 games launched between 2017 and 2021 remain active, according to data from CoinGecko. ([Cointelegraph](https://cointelegraph.com/news/three-quarters-web3-blockchain-games-failed-last-five-years-coingecko))
 
