Adding links to news summary

--- a/newsletter/2023-12-10.md
+++ b/newsletter/2023-12-10.md
@@ -6,15 +6,11 @@
 
 <!--
 
-The mainstream tech press generally can't tell the difference between covering tech and covering tech *companies.* This shortcoming is increasingly both a limitation in their coverage of crypto and something that's highlighted by it.
+The mainstream tech press generally can't tell the difference between covering tech and covering tech *companies.* This shortcoming is increasingly both a limitation in their coverage of crypto and a problem that's highlighted by it.
 
 The underlying protocols for sharing information on the internet, including email, were not built by a company. The worldwide web wasn't founded by a company. And most servers that runs these those networks are using an operating system that wasn't built by a company.
 
 - RFK endorsement...  Pickup NY Mag story on him.
-
-Watch what tech executives say about other people's organizations, not their own.
-
-f-bombs at the advertisers.
 
 Crypto is demonstrably good at two things:
 
@@ -24,26 +20,25 @@ Crypto is demonstrably good at two things:
 
 Lead item: ~400 words. Using Leo to work on the newsletter
 
-
-One possibility this time: Pickup YouTube video with Guy Swann talking about intersection of AI and bitcoin.
-
-A good rule of thumb about the pronouncements. No, just listen to them when they talk about someone else's company, especially if it's a competitor. Their insight is then much more consistent in its rapier-like sharpness.
-
-Running Twitter into the ground.
-
-Binance CEO CZ was notoriously prescient in competitor FTX. But now he's landed in his own hot water running Binance.
-
-- CZ stepped down as chair of Binance US. https://www.coindesk.com/policy/2023/11/28/changpeng-cz-zhao-steps-down-from-binanceus-board/ | https://www.coindesk.com/policy/2023/11/21/binance-to-make-complete-exit-from-us-pay-billions-to-fincen-ofac-on-top-of-doj-settlement/
-
-Cathie Wood on Gensler
-
-https://fortune.com/longform/gary-gensler-sec-chair-interview-cryptocurrency-climate-change/
-
 -->
 
 ### Week in Review
 
-- **El Salvador's President Nayib Bukele** said the country's sovereign bitcoin holdings are now profitable thanks to the recent rally. ([CoinDesk](https://www.coindesk.com/markets/2023/12/04/el-salvadors-bitcoin-investment-in-the-black-says-president-bukele/))
+- **Market wrap:** TK item on the week's volatile market action. Update Friday for the latest. <!-- https://decrypt.co/208164/bitcoin-halving-what-it-means-investors | -->
+
+- https://decrypt.co/208945/rising-bitcoin-fees-prompt-renewed-battle-over-ordinals-brc-20-tokens
+
+- https://blockworks.co/news/uranium-booze-blockchain
+
+- https://www.axios.com/2023/12/05/exclusive-robo-advisor-blockchain-heron-goldfinch
+
+- https://fortune.com/crypto/2023/12/06/jamie-dimon-crypto-senate-hearing-jpmorgan-blockchain-payments/
+
+- https://www.coindesk.com/consensus-magazine/2023/12/04/introducing-most-influential-2023/
+
+- https://www.theblock.co/post/266656/binance-withdraws-application-to-manage-abu-dhabi-investment-fund-report
+
+- **El Salvador's President Nayib Bukele** said the country's sovereign bitcoin holdings are now profitable thanks to the token's recent price gains. ([CoinDesk](https://www.coindesk.com/markets/2023/12/04/el-salvadors-bitcoin-investment-in-the-black-says-president-bukele/))
 
 - **The Bank for International Settlements** recently unveiled a [joint innovation project](https://www.atlanticcouncil.org/blogs/new-atlanticist/a-newly-announced-blockchain-backed-system-could-transform-development-lending/) with the International Monetary Fund and World Bank to use blockchain technology to speed up and secure transfers of money loaned to developing nations.
 
@@ -57,17 +52,13 @@ https://fortune.com/longform/gary-gensler-sec-chair-interview-cryptocurrency-cli
 
 - New AI art raises questions about authenticity and ownership of creative works. (https://www.washingtonpost.com/opinions/2023/11/29/sports-illustrated-artificial-intelligence/)
 
-- tk
-
-- tk
-
-- tk
+- https://www.nytimes.com/2023/12/07/technology/tech-startups-collapse.html
 
 ### Odds & Ends
 
-https://www.nytimes.com/2023/12/07/technology/tech-startups-collapse.html
+- https://www.forbes.com/sites/bernardmarr/2023/12/07/the-6-most-important-web3-blockchain-and-cryptocurrency-trends-in-2024/
 
-https://www.space.com/star-wars-holiday-special-documentary-book
+- https://www.space.com/star-wars-holiday-special-documentary-book
 
 <!-- Boilerplate needs re-working. This is version from last week... -->
 
